# tdd_cpp_code

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  calculator.cpp  calculator.h  calculatorTests h  calculatorTests.cpp  testRunner.cpp
docs/: README.md
docs/Labs/: 01_lab_guide_initial_steps.md  02_lab_guide_fixtures.md  03_lab_guide_exceptions.md  03_lab_guide_next_steps.md  04_lab_guide_mocks.md  04_lab_guide_non_failing.md  05_lab_guide_ci_cd.md
docs/Labs/SoundEx Version/: 01_lab_guide_initial_steps.md  03_lab_guide_next_steps.md  04_lab_guide_non_failing.md  05_lab_guide_ci_cd.md
docs/Setup/: Setting up for TDD C++.md
docs/Walkthroughs/: 01_vs_code_setup_for_cpp.md  01_walkthrough_environment.md  02_no_framework_tdd.md  02_walkthrough_first_text_style.md  03_project_structure.md  03_walkthrough_noframework_test.md  04_catch2_setup.md  04_walkthrough_vs_code_setup.md  05_gtest_setup.md  05_walkthrough_restructure_project.md  06_update_tests.md  06_walkthrough_google_test.md  07_triangulation.md  08_fixture_refactoring.md  09_parameterized_refactoring.md  10_exceptions.md  10_walkthrough_exceptions.md  11_doubles_mock.md  11_walkthrough_doubles_mock.md  12_gmock_mock.md  12_walkthrough_gitlab.md  13_walkthrough_selenium.md  98_walkthrough_doubles_mock.md  99_Appendix 01 CppUnit Setup.md
include/: calculator.h  interestrateservice.h  rateservice.h
src/: calculator.cpp  portfolio.cpp
src/include/: calculator.h  interestrateservice.h  portfolio.h  rateservice.h  stockpriceservice.h
test/: calculatorTests.cpp  calculatorTests.h  interestrateservice.h  mockpriceservice.h  mockservice.h  portfoliotests.cpp
